--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Beetroot</title> 
+  <title>Beetroot</title>
  <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
  <body>
@@ -21,11 +21,14 @@
     </figure>
     <main>
     <p>A bundle of organic beets from a local farm food co-op program.</p>
-    <p>55 to 65 days are needed from germination to harvest of the root.</p>
+    <p><data value="55">55</data> to <data value="65">65</data> days are needed from germination to harvest of the root.</p>
     <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
-    <p>In fact, <cite>Jim Halpert</cite> once said this about beets, “Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i>”.</p>
+    <p>In fact, <cite>Jim Halpert</cite> once said this about beets,
+    <q cite="http://www.imdb.com/title/tt1008441/quotes"></q>. “Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i>”.</p>
     <p>I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets.
-    — <cite>Chris Pratt</cite></p>
+      <blockquote cite="http://www.brainyquote.com/quotes/quotes/c/chrispratt475183.html">
+      <cite>— Chris Pratt</cite>
+      </blockquote>
     <header>
       <h2>Common varieties</h2>
       <ol>
@@ -44,21 +47,15 @@
         <dt>Protein:</dt><dd>1.68 g</dd>
       </dl>
       <h2>Tags</h2></header>
-      <ul>
+      <aside class="">
+    <ul>
         <li>Crimson</li>
         <li>Awesome</li>
         <li>Pickle-able</li>
         <li>Vegetable</li>
         <li>Delicious</li>
-        <ul>
-        <dl class="">
-        <data value="100 g"></data>
-        <data value="180 g"></data>
-        <data value="9.96 g"></data>
-        <data value="0.18 g"></data>
-        <data value="1.68 g"></data>
-        </dl>
-        <aside>
+        </ul>
+        </aside>
           </main>
         <footer>
       <small>Source:<a href="http://www.wikipedia.org/">Wikipedia</a><a>Wikipedia</a>;Last modified: Aug30, 2014</small>
